fix: color vars across components

--- a/src/lib/styles/variables/sizes.scss
+++ b/src/lib/styles/variables/sizes.scss
@@ -15,3 +15,9 @@ $height-small: 30px;
 $height-medium: 40px;
 $height-large: 50px;
 $height-xlarge: 60px;
+
+$radius-tiny: 2.5px;
+$radius-small: 5px;
+$radius-medium: 10px;
+$radius-large: 25px;
+$radius-xlarge: 100px;
