feat: add label component

--- a/src/lib/styles/variables/colors.scss
+++ b/src/lib/styles/variables/colors.scss
@@ -3,5 +3,6 @@ $color-green: forestgreen;
 $color-orange: orange;
 $color-red: crimson;
 $color-gray: lightgray;
+$color-dim: darkgray;
 
 $color-primary: $color-blue;
