feat: add `disabled` state to button

--- a/src/lib/styles/variables/colors.scss
+++ b/src/lib/styles/variables/colors.scss
@@ -4,5 +4,6 @@ $color-orange: orange;
 $color-red: crimson;
 $color-gray: lightgray;
 $color-dim: darkgray;
+$color-bright: gainsboro;
 
 $color-primary: $color-blue;
